# TAcq

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_test_deploy.yml
data/examtimetabling/: examtimetabling_3s-2cps-3days-2slots-2r_test.csv  examtimetabling_3s-2cps-3days-2slots-2r_train.csv  examtimetabling_4s-3cps-3days-2slots-2r_test.csv  examtimetabling_4s-3cps-3days-2slots-2r_train.csv  examtimetabling_5s-4cps-5days-2slots-2r_test.csv  examtimetabling_5s-4cps-5days-2slots-2r_train.csv
data/jigsaw/: jigsaw-1_test.csv  jigsaw-1_train.csv  jigsaw-2_test.csv  jigsaw-2_train.csv  jigsaw-3_test.csv  jigsaw-3_train.csv
data/nurserostering/: nurserostering_4d-2s-4nps-12n_test.csv  nurserostering_4d-2s-4nps-12n_train.csv  nurserostering_5d-3s-5nps-18n_test.csv  nurserostering_5d-3s-5nps-18n_train.csv  nurserostering_7d-3s-3nps-15n_test.csv  nurserostering_7d-3s-3nps-15n_train.csv
data/sudoku/: sudoku9_test.csv  sudoku9_train.csv
src/tacq/: CSP.py  Template.py
tests/: test_TemplateAcquisition.py
