[project]
name = "tacq"
version = "0.0.1"
authors = [
    { name = "Areski Himeur", email = "areski.himeur@lirmm.fr" },
]
description = "A framework for learning compact representations of constraint networks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "Operating System :: OS Independent",
]
dependencies = ["ortools>=9.11.4210", "typing_extensions>=4.12.2", "languageFreeAcq>=0.0.7"]

[project.urls]
Homepage = "https://github.com/Hareski/TAcq"
Issues = "https://github.com/Hareski/TAcq/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}